# defillama-py

./: .pre-commit-config.yaml  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: main.yml
src/defillama_py/: __init__.py  client.py  test.py
tests/: test_client.py
