[tool.poetry]
name = "defillama-py"
version = "0.1.0"
description = "DefiLlama wrapper with raw API access & enhanced data transformations"
authors = ["Landon Gingerich <landon.ging@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/lgingerich/defillama-py"
keywords = ["defillama", "defi", "API", "wrapper"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

[tool.poetry.dependencies]
python = "^3.8"
requests = ">=2.31.0"
pandas = ">=2.0.3"

[tool.poetry.dev-dependencies]
pytest = ">=7.4.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.0.286"
black = "^23.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
